scss table fixes - default top alignment, fix blog post table headers, add youtube embed

--- a/_sass/minimal-mistakes/_tables.scss
+++ b/_sass/minimal-mistakes/_tables.scss
@@ -35,7 +35,7 @@ td {
 tr,
 td,
 th {
-  vertical-align: middle;
+  vertical-align: top;
   text-align: center;
   unicode-bidi: plaintext;
 }
